[gd_scene load_steps=27 format=3 uid="uid://dy0ngy08f8p36"]

[ext_resource type="Script" uid="uid://eeibkvm6ia0v" path="res://player.gd" id="1_4ntmi"]
[ext_resource type="Texture2D" uid="uid://ds28j4mvxt4ms" path="res://buried_sprites.png" id="1_l8h54"]
[ext_resource type="AudioStream" uid="uid://xov2ixahb6a0" path="res://walk.wav" id="3_i3pqv"]
[ext_resource type="AudioStream" uid="uid://6t8yhrycxu8t" path="res://shoot.wav" id="4_hqtel"]
[ext_resource type="AudioStream" uid="uid://b1a886tuw60jm" path="res://powerup.wav" id="5_sweqy"]
[ext_resource type="AudioStream" uid="uid://bsj1r7xi66cyr" path="res://nuke.wav" id="6_2hs0m"]
[ext_resource type="AudioStream" uid="uid://ct5m65iya5e46" path="res://gameover.wav" id="7_1jxqw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_o3jxj"]
radius = 8.0

[sub_resource type="Animation" id="Animation_od3ui"]
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UpperBody:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_gu6f8"]
resource_name = "attack_down"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UpperBody:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_dkpta"]
resource_name = "attack_left"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UpperBody:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_p5o4e"]
resource_name = "attack_right"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UpperBody:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_5htga"]
resource_name = "attack_up"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UpperBody:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_btcbx"]
resource_name = "idle_down"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UpperBody:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_apopc"]
resource_name = "walk_down"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UpperBody:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_lfmf2"]
resource_name = "walk_left"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UpperBody:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_x3vf3"]
resource_name = "walk_right"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UpperBody:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_00tjw"]
resource_name = "walk_up"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UpperBody:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lfmf2"]
_data = {
&"RESET": SubResource("Animation_od3ui"),
&"attack_down": SubResource("Animation_gu6f8"),
&"attack_left": SubResource("Animation_dkpta"),
&"attack_right": SubResource("Animation_p5o4e"),
&"attack_up": SubResource("Animation_5htga"),
&"idle_down": SubResource("Animation_btcbx"),
&"walk_down": SubResource("Animation_apopc"),
&"walk_left": SubResource("Animation_lfmf2"),
&"walk_right": SubResource("Animation_x3vf3"),
&"walk_up": SubResource("Animation_00tjw")
}

[sub_resource type="Animation" id="Animation_4ntmi"]
length = 0.001

[sub_resource type="Animation" id="Animation_pisgm"]
resource_name = "idle_down"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Legs:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [11]
}

[sub_resource type="Animation" id="Animation_fhl08"]
resource_name = "walk_down"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Legs:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [9, 11, 10, 11]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("walkAudio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_i3pqv")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_i3pqv")
}],
"times": PackedFloat32Array(0, 0.4)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_vtle1"]
resource_name = "walk_left"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Legs:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [9, 11, 10, 11]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("walkAudio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_i3pqv")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_i3pqv")
}],
"times": PackedFloat32Array(0, 0.4)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_k53q1"]
resource_name = "walk_right"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Legs:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [9, 11, 10, 11]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("walkAudio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_i3pqv")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_i3pqv")
}],
"times": PackedFloat32Array(0, 0.4)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_gwnis"]
resource_name = "walk_up"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Legs:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [9, 11, 10, 11]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("walkAudio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_i3pqv")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_i3pqv")
}],
"times": PackedFloat32Array(0, 0.4)
}
tracks/1/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_od3ui"]
_data = {
&"RESET": SubResource("Animation_4ntmi"),
&"idle_down": SubResource("Animation_pisgm"),
&"walk_down": SubResource("Animation_fhl08"),
&"walk_left": SubResource("Animation_vtle1"),
&"walk_right": SubResource("Animation_k53q1"),
&"walk_up": SubResource("Animation_gwnis")
}

[node name="Player" type="CharacterBody2D" groups=["Player"]]
z_index = 1
position = Vector2(0, 1)
collision_mask = 10
script = ExtResource("1_4ntmi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_o3jxj")

[node name="UpperBody" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(0, -8)
texture = ExtResource("1_l8h54")
hframes = 8
vframes = 7
frame = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="UpperBody"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_lfmf2")
}

[node name="Legs" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(0, -8)
texture = ExtResource("1_l8h54")
hframes = 8
vframes = 7
frame = 9

[node name="AnimationPlayer" type="AnimationPlayer" parent="Legs" groups=["Player"]]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_od3ui")
}

[node name="walkAudio" type="AudioStreamPlayer" parent="."]
volume_db = -16.0

[node name="shootAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_hqtel")
volume_db = -8.0

[node name="powerupAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_sweqy")
volume_db = -8.0

[node name="nukeAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_2hs0m")
volume_db = -8.0

[node name="gameOverAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_1jxqw")
volume_db = -8.0
